--- a/src/app/components/car/car.component.css
+++ b/src/app/components/car/car.component.css
@@ -12,6 +12,12 @@
   flex-wrap: wrap;
 }
 
+.car-road {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+
 .car-icon {
   height: 48px;
   width: 48px;
@@ -19,6 +25,8 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
+  position: relative;
+  left: 0;
 }
 
 .car-icon mat-icon {
@@ -35,6 +43,7 @@
   align-self: normal;
   display: flex;
   justify-content: center;
+  padding: 0.4rem 0.1rem;
 }
 
 .race-start-line {
