--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-#rootContainer {
+:host {
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
@@ -18,10 +18,6 @@ header h1 {
 
 header h1 sub {
   font-size: 0.6em;
-}
-
-header nav {
-  width: 10%;
 }
 
 header nav ul {
