--- a/src/app/components/garage/garage.component.css
+++ b/src/app/components/garage/garage.component.css
@@ -2,6 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  row-gap: 2rem;
 }
 
 header {
@@ -9,6 +10,7 @@ header {
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
+  row-gap: 1rem;
 }
 
 .cars-control {
@@ -16,6 +18,8 @@ header {
   align-items: center;
   column-gap: 4rem;
   flex-wrap: inherit;
+  row-gap: 1rem;
+  justify-content: center;
 }
 
 .race-controls {
@@ -42,11 +46,15 @@ main {
 
 .garage-racing-area {
   height: 675px;
+  overflow: hidden auto;
+  scrollbar-color: #ffd740 gray;
+  scrollbar-width: thin;
   display: flex;
   flex-direction: column;
   row-gap: 0.5rem;
   border: 2px dashed gray;
   padding: 0.5rem;
+  background: #fff;
 }
 
 .garage-details-area {
@@ -73,10 +81,4 @@ button {
 
 mat-paginator {
   background: transparent;
-}
-
-.garage-racing-area {
-  overflow: hidden auto;
-  scrollbar-color: #ffd740 gray;
-  scrollbar-width: thin;
 }
