--- a/src/app/components/winners/winners.component.html
+++ b/src/app/components/winners/winners.component.html
@@ -1,53 +1,67 @@
-<main>
-  <table mat-table [dataSource]="dataSource">
-    <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-    </ng-container>
+<table
+  mat-table
+  matSort
+  matSortDisableClear
+  [dataSource]="this.store.winners()"
+  (matSortChange)="onSortTable($event)"
+>
+  <!-- Id Column -->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 15%">
+      No.
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+  </ng-container>
 
-    <!-- Car Column -->
-    <ng-container matColumnDef="car">
-      <th mat-header-cell *matHeaderCellDef>Car</th>
-      <td mat-cell *matCellDef="let element">{{ element.car }}</td>
-    </ng-container>
+  <!-- Car Column -->
+  <ng-container matColumnDef="car">
+    <th mat-header-cell *matHeaderCellDef style="width: 20%">Car</th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon [style.color]="element.color">snowmobile</mat-icon>
+    </td>
+  </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef style="width: 25%">Name</th>
+    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+  </ng-container>
 
-    <!-- Wins Column -->
-    <ng-container matColumnDef="wins">
-      <th mat-header-cell *matHeaderCellDef>Wins</th>
-      <td mat-cell *matCellDef="let element">{{ element.wins }}</td>
-    </ng-container>
+  <!-- Wins Column -->
+  <ng-container matColumnDef="wins">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 15%">
+      Wins
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.wins }}</td>
+  </ng-container>
 
-    <!-- Best Time (seconds) Column -->
-    <ng-container matColumnDef="bestTime">
-      <th mat-header-cell *matHeaderCellDef>Best Time (seconds)</th>
-      <td mat-cell *matCellDef="let element">{{ element.time }}</td>
-    </ng-container>
+  <!-- Best Time (seconds) Column -->
+  <ng-container matColumnDef="time">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 15%">
+      Best Time (seconds)
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.time }}</td>
+  </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <section class="winners-details-area">
-    <h1>{{ nameWithCount() }}</h1>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<section class="winners-details-area">
+  <h1>{{ store.winnersInfo() }}</h1>
 
-    @if (winners().length > pageLimit) {
-      <div class="page-info">
-        <h3>{{ pageInfo() }}</h3>
+  @if (store.totalWinnersCount() > pageLimit) {
+    <div class="page-info">
+      <h3>{{ store.winnersPageInfo() }}</h3>
 
-        <mat-paginator
-          [length]="winners().length"
-          [pageSize]="pageLimit"
-          [hidePageSize]="true"
-          aria-label="Select page"
-        >
-        </mat-paginator>
-      </div>
-    }
-  </section>
-</main>
+      <mat-paginator
+        [length]="store.totalWinnersCount()"
+        (page)="onPaginatorPageChange($event)"
+        [pageSize]="pageLimit"
+        [pageIndex]="store.winnersPaginationIndex()"
+        [hidePageSize]="true"
+        aria-label="Select page"
+      >
+      </mat-paginator>
+    </div>
+  }
+</section>
